remove pool of websocket clients in favor of http clients

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -46,11 +46,15 @@ ASTRIA_CONDUCTOR_PRETTY_PRINT=false
 # is set to `true`.
 NO_COLOR=
 
-# The URL to a fully trusted CometBFT/Sequencer to issue cometbft RPCs. Example
-# RPCs are subscribing to new blocks, fetching blocks at a given level, or
+# The URL to a fully trusted CometBFT/Sequencer to issue CometBFT RPCs over HTTP.
+# Example RPCs are getting the latest height, fetching blocks at a given level, or
 # retrieving validators.
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
-ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657/websocket"
+ASTRIA_CONDUCTOR_SEQUENCER_COMETBFT_URL="http://127.0.0.1:26657"
+
+# The duration in milliseconds that sequencer-relayer sleeps before
+# requesting the latest block height from sequencer.
+ASTRIA_CONDUCTOR_SEQUENCER_BLOCK_TIME=1000
 
 # Set to true to enable prometheus metrics.
 ASTRIA_CONDUCTOR_NO_METRICS=true
