feat(conductor): migrate to sequencer grpc api

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -46,9 +46,13 @@ ASTRIA_CONDUCTOR_PRETTY_PRINT=false
 # is set to `true`.
 NO_COLOR=
 
-# The URL to a fully trusted CometBFT/Sequencer to issue CometBFT RPCs over HTTP.
-# Example RPCs are getting the latest height, fetching blocks at a given level, or
-# retrieving validators.
+# The URL of the Sequencer gRPC service for requesting new blocks.
+# 127.0.0.1:8080 is the default socket address for its gRPC server.
+ASTRIA_CONDUCTOR_SEQUENCER_GRPC_URL="http://127.0.0.1:8080"
+
+# The URL of a fully trusted CometBFT/Sequencer node to get the latest height of
+# the Sequencer network, and to get the validators for a given Sequencer height
+# to verify Sequencer data read off Celestia.
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
 ASTRIA_CONDUCTOR_SEQUENCER_COMETBFT_URL="http://127.0.0.1:26657"
 
