--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -44,7 +44,7 @@ tokio = { workspace = true, features = [
   "rt-multi-thread",
   "sync",
   "time",
-  "signal"
+  "signal",
 ] }
 tokio-util = { workspace = true, features = ["rt"] }
 tracing = { workspace = true, features = ["attributes"] }
