--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -56,9 +56,10 @@ ASTRIA_CONDUCTOR_SEQUENCER_GRPC_URL="http://127.0.0.1:8080"
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
 ASTRIA_CONDUCTOR_SEQUENCER_COMETBFT_URL="http://127.0.0.1:26657"
 
-# The duration in milliseconds that sequencer-relayer sleeps before
-# requesting the latest block height from sequencer.
-ASTRIA_CONDUCTOR_SEQUENCER_BLOCK_TIME_MS=1000
+# The duration in milliseconds that conductor waits between requests for the latest
+# block height from sequencer.
+# A block time of 2000 is the default for sequencer.
+ASTRIA_CONDUCTOR_SEQUENCER_BLOCK_TIME_MS=2000
 
 # Set to true to enable prometheus metrics.
 ASTRIA_CONDUCTOR_NO_METRICS=true
