feat(conductor)!: use Sequencer gRPC API to fetch soft bocks. (#815)
## Summary
Uses the new gRPC based Sequencer API to fetch soft blocks from
Sequencer.

## Background
https://github.com/astriaorg/astria/pull/701 introduced a gRPC based API
to fetch block information from sequencer for just the rollup IDs that
are desired (compared to fetching the full block + a filter afterwards
to get the desired data).

This patch removes the websocket based fetch in favor of this simpler
API.

## Changes
- replace the websocket-based sequencer block fetch by the gRPC based
filtered block fetch
- remove the websocket client pool (it was very complex)
- use the cometbft http based RPC to fetch the most recent sequencer
heights (similar to what sequencer-relayer is doing)

## Testing
All tests were updated to work with the newest changes. This patch must
be tested end-to-end.


## Breaking Changelist
New environment variables were introduced:
- `ASTRIA_CONDUCTOR_SEQUENCER_COMETBFT_URL`: a String containing the URL
of the cometbft HTTP RPC endpoint
- `ASTRIA_CONDUCTOR_SEQUENCER_GRPC_URL`: a String containing URL of the
sequencer gRPC endpoint
- `ASTRIA_CONDUCTOR_SEQUENCER_BLOCK_TIME_MS`: an integer containing the
duration between subsequent cometbft ABCI requests to figure out the
latest sequencer height

An environment variable was removed:
- `ASTRIA_CONDUCTOR_SEQUENCER_URL`

## Related Issues
Closes https://github.com/astriaorg/astria/issues/789

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -46,11 +46,20 @@ ASTRIA_CONDUCTOR_PRETTY_PRINT=false
 # is set to `true`.
 NO_COLOR=
 
-# The URL to a fully trusted CometBFT/Sequencer to issue cometbft RPCs. Example
-# RPCs are subscribing to new blocks, fetching blocks at a given level, or
-# retrieving validators.
+# The URL of the Sequencer gRPC service for requesting new blocks.
+# 127.0.0.1:8080 is the default socket address for its gRPC server.
+ASTRIA_CONDUCTOR_SEQUENCER_GRPC_URL="http://127.0.0.1:8080"
+
+# The URL of a fully trusted CometBFT/Sequencer node to get the latest height of
+# the Sequencer network, and to get the validators for a given Sequencer height
+# to verify Sequencer data read off Celestia.
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
-ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657/websocket"
+ASTRIA_CONDUCTOR_SEQUENCER_COMETBFT_URL="http://127.0.0.1:26657"
+
+# The duration in milliseconds that conductor waits between requests for the latest
+# block height from sequencer.
+# A block time of 2000 is the default for sequencer.
+ASTRIA_CONDUCTOR_SEQUENCER_BLOCK_TIME_MS=2000
 
 # Set to true to enable prometheus metrics.
 ASTRIA_CONDUCTOR_NO_METRICS=true
