--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -27,8 +27,9 @@ ASTRIA_COMPOSER_API_LISTEN_ADDR="0.0.0.0:0"
 # Address of the RPC server for the sequencer chain
 ASTRIA_COMPOSER_SEQUENCER_URL="http://127.0.0.1:26657"
 
-# A list of execution <chain_id_1>::<rpc_server_1>,<chain_id_2>::<rpc_server_2>.
-# Chain IDs are not case sensitive. If an ID is repeated, the last list item is used.
+# A list of execution `<rollup_name_1>::<rpc_server_1>,<rollup_name_2>::<rpc_server_2>`.
+# Rollup names are not case sensitive. If a name is repeated, the last list item is used.
+# names are sha256 hashed and used as the `rollup_id` in `SequenceAction`s
 ASTRIA_COMPOSER_ROLLUPS="astriachain::ws://127.0.0.1:8545"
 
 # Private key for the sequencer account used for signing transactions
