--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,15 @@ on:
       tag:
         description: Git branch, or tag to build from.
         required: false
+      target:
+        description: Target to build.
+        required: false
+        type: choice
+        options:
+          - composer
+          - conductor
+          - sequencer
+          - sequencer-relayer
   push:
     branches:
       - "main"
@@ -15,6 +24,7 @@ on:
       - "**-v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+"
       - "**-v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+"
       - "**-v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"
+    
   # trigger on pull request updates when target is `main` branch
   pull_request:
     types:
@@ -31,7 +41,7 @@ jobs:
 
   composer:
     needs: run_checker
-    if: needs.run_checker.outputs.run_docker == 'true'
+    if: needs.run_checker.outputs.run_docker == 'true' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'composer')
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: composer
@@ -41,7 +51,7 @@ jobs:
 
   conductor:
     needs: run_checker
-    if: needs.run_checker.outputs.run_docker == 'true'
+    if: needs.run_checker.outputs.run_docker == 'true' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'conductor')
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: conductor
@@ -51,7 +61,7 @@ jobs:
 
   sequencer:
     needs: run_checker
-    if: needs.run_checker.outputs.run_docker == 'true'
+    if: needs.run_checker.outputs.run_docker == 'true' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'sequencer')
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: sequencer
@@ -61,7 +71,7 @@ jobs:
 
   sequencer-relayer:
     needs: run_checker
-    if: needs.run_checker.outputs.run_docker == 'true'
+    if: needs.run_checker.outputs.run_docker == 'true' || (github.event_name == 'workflow_dispatch' && github.event.inputs.target == 'sequencer-relayer')
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: sequencer-relayer
