--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -25,8 +25,8 @@ hex = { workspace = true }
 humantime = { workspace = true }
 indexmap = { workspace = true }
 itoa = { workspace = true }
+pbjson-types = { workspace = true }
 prost = { workspace = true }
-prost-types = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
