--- a/tools/protobuf-compiler/Cargo.toml
+++ b/tools/protobuf-compiler/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pbjson-build = "0.6.2"
 tempfile = "3.8.1"
 tonic-build = "0.10.2"
 walkdir = "2.4.0"
