--- a/charts/evm-rollup/templates/volumes.yaml
+++ b/charts/evm-rollup/templates/volumes.yaml
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-pvc-geth
-  namespace: {{ include "rollup.namespace" . }}
+  namespace: {{ include "rollup.namespace" $ }}
   labels:
     "app.kubernetes.io/name": "{{ $.Values.config.rollup.name }}-{{ $.Chart.Name }}"
     "app.kubernetes.io/managed-by": {{ $.Release.Service | quote }}
@@ -54,7 +54,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ $.Values.config.rollup.name }}-{{ $value.persistentVolumeName }}-pvc-blockscout
-  namespace: {{ include "rollup.namespace" . }}
+  namespace: {{ include "rollup.namespace" $ }}
   labels:
     "app.kubernetes.io/name": {{ $.Values.config.rollup.name }}-{{ $.Chart.Name }}
     "app.kubernetes.io/managed-by": {{ $.Release.Service | quote }}
