--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     needs: run_checker
-    if: needs.run_checker.outputs.run_release_charts == 'true'
+    #  if: needs.run_checker.outputs.run_release_charts == 'true'
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
@@ -61,9 +61,8 @@ jobs:
         uses: helm/chart-releaser-action@v1.6.0
         with:
           skip_existing: true
+          config: cr.yaml
         env:
-          CR_OWNER: "astriaorg"
-          CR_GIT_REPO: "dev-cluster"
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
   conductor:
