feat(core): add serialization to execution v1alpha2 compliant with protobuf json mapping (#857)
## Summary
Uses pbjson to generate serde `Serialize` and `Deserialize`
implementations compliant with the protobuf JSON mapping for all types
defined or used by the execution v1alpha2 API.

## Background
It is convenient to have a standard for displaying our protobuf spec as
JSON. This is useful for enforcing serialization standards across the
codebase and will make maintenance easier. It is also useful for writing
tests (for example, to use tools like `assert_json_diff`).

NOTE: the protobuf JSON mapping prescribes base64 as the byte encoding.
Therefore this patch deviates from this crate's convention to use hex.
Because this is an entirely cosmetic change this is not considered
breaking (we communicate using protobuf bytes, not string containing
hex-encoded bytes).

## Changes
- Update the compiler tool to emit code implementing `serde::Serialize`
and `serde::Deserialize` (for now only for `astria.execution.v1alpha2`
and imports that it uses, namely `astria.sequencer.v1.RollupData`,
`astria.sequencer.v1.Deposit`, and `astria.primitive.v1.Uint128`)
- Replace `prost-types` by `pbjson-types`.
- Update the native types to delegate to the protobuf types when
serializing to json.
- Change display formatting of `RollupId` to base64

## Testing
TODO: add insta snapshot tests?

--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -12,32 +12,6 @@ homepage = "https://astria.org"
 name = "astria-conductor"
 
 [dependencies]
-async-trait = "0.1.73"
-futures-bounded = "0.2.3"
-pin-project-lite = "0.2"
-tracing-futures = { version = "0.2.5", features = ["futures-03"] }
-
-base64 = { workspace = true }
-bytes = { workspace = true }
-ed25519-consensus = { workspace = true }
-futures = { workspace = true }
-hex = { workspace = true }
-humantime = { workspace = true }
-indexmap = { workspace = true }
-itoa = { workspace = true }
-prost = { workspace = true }
-prost-types = { workspace = true }
-rand = { workspace = true }
-serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
-sha2 = { workspace = true }
-thiserror = { workspace = true }
-tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
-tokio-util = { workspace = true, features = ["rt"] }
-tonic = { workspace = true }
-tracing = { workspace = true, features = ["valuable"] }
-tryhard = { workspace = true }
-
 astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
 astria-core = { path = "../astria-core", features = ["client", "serde"] }
 astria-eyre = { path = "../astria-eyre" }
@@ -50,18 +24,45 @@ sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequ
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
   "display",
 ] }
+
+base64 = { workspace = true }
+bytes = { workspace = true }
+ed25519-consensus = { workspace = true }
+futures = { workspace = true }
+hex = { workspace = true }
+humantime = { workspace = true }
+indexmap = { workspace = true }
+itoa = { workspace = true }
+pbjson-types = { workspace = true }
+prost = { workspace = true }
+rand = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+sha2 = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
+tokio-util = { workspace = true, features = ["rt"] }
+tonic = { workspace = true }
+tracing = { workspace = true, features = ["valuable"] }
+tryhard = { workspace = true }
+
+async-trait = "0.1.73"
+futures-bounded = "0.2.3"
 itertools = "0.12.1"
+pin-project-lite = "0.2"
+tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 
 [dev-dependencies]
-jsonrpsee = { workspace = true, features = ["server"] }
-
-tokio-stream = { version = "0.1.14", features = ["net"] }
-
 astria-core = { path = "../astria-core", features = ["server", "test-utils"] }
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
+
 insta = { workspace = true, features = ["json"] }
+jsonrpsee = { workspace = true, features = ["server"] }
+
+chrono = "0.4.35"
+tokio-stream = { version = "0.1.14", features = ["net"] }
 
 [build-dependencies]
 astria-build-info = { path = "../astria-build-info", features = ["build"] }
