--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ members = [
   "crates/astria-config",
   "crates/astria-core",
   "crates/astria-eyre",
+  "crates/astria-grpc-mock",
+  "crates/astria-grpc-mock-test",
+  "crates/astria-grpc-mock-test-codegen",
   "crates/astria-merkle",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
@@ -32,6 +35,9 @@ default-members = [
   "crates/astria-config",
   "crates/astria-core",
   "crates/astria-merkle",
+  "crates/astria-grpc-mock",
+  "crates/astria-grpc-mock-test",
+  "crates/astria-grpc-mock-test-codegen",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
   "crates/astria-sequencer-relayer",
