--- a/tools/protobuf-compiler/Cargo.toml
+++ b/tools/protobuf-compiler/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 pbjson-build = "0.6.2"
+prost-build = "0.12.3"
 tempfile = "3.8.1"
 tonic-build = "0.10.2"
 walkdir = "2.4.0"
