--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -53,8 +53,8 @@ ASTRIA_COMPOSER_NO_METRICS=true
 # The address at which the prometheus HTTP listener will bind if enabled.
 ASTRIA_COMPOSER_METRICS_HTTP_LISTENER_ADDR="127.0.0.1:9000"
 
-# The address at which the gRPC collector is listening.
-ASTRIA_COMPOSER_GRPC_COLLECTOR_ADDR="127.0.0.1:5051"
+# The address at which the gRPC collector and health services are listening.
+ASTRIA_COMPOSER_GRPC_ADDR="0.0.0.0:0"
 
 # The OTEL specific config options follow the OpenTelemetry Protocol Exporter v1
 # specification as defined here:
