--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,12 @@ jobs:
           draft:  ${{ github.ref_name != 'main'}}
           input: "proto/executionapis"
           buf_token: ${{ secrets.BUF_TOKEN }}
+      - uses: bufbuild/buf-push-action@v1
+        with:
+          draft: ${{ github.ref_name != 'main'}}
+          input: "proto/composerapis"
+          buf_token: ${{ secrets.BUF_TOKEN }}
+
 
   charts:
     permissions:
